# POC_BA3s

./: .gitignore  Dockerfile  README.md  agent_implementation_app.py  app.py  books.db  docker-compose.yaml  pyproject.toml  rag_implementation_app.py  sql_agent_app.py
api/: api_utils.py  main.py
api/routes/: chat.py
data_cleaning/: eda.ipynb
scripts/: entrypoint.sh
src/: agent_UI.py  chat.py  chat_route.py  constants.py  ingestion.py  main_routes.py  prompts.py  server.py  sql_agent.py  utils.py
src/data/: parsing.py
src/vectordb_data/: chroma.sqlite3
