[tool.poetry]
name = "desafio-a3data"
version = "0.1.0"
description = ""
authors = ["luizguilhermedev <luizg_dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-groq = "^0.2.1"
langchain-experimental = "^0.3.3"
tabulate = "^0.9.0"
blue = "^0.9.1"
langchain-openai = "^0.2.6"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
streamlit = "^1.40.0"
matplotlib = "^3.9.2"
chromadb = "^0.5.18"
seaborn = "^0.13.2"
langgraph = "^0.2.52"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
